saving uncommitted changes in /etc prior to pacman run

--- a/lightdm/lightdm-gtk-greeter.conf
+++ b/lightdm/lightdm-gtk-greeter.conf
@@ -49,7 +49,7 @@
 #
 [greeter]
 #background=/usr/share/backgrounds/trg-wallpapers/arch-cream.png
-background=/usr/share/backgrounds/trg-wallpapers/arch-grey-blue-title.jpg
+background=/usr/share/backgrounds/trg-wallpapers/grey-arch-logo-wp.png
 user-background=true
 theme-name=Kali-Dark
 icon-theme-name=Flat-Remix-Blue-Dark
@@ -63,7 +63,7 @@ indicators = ~session;~spacer;~host;~layout;~a11y;~clock;~sound;~power;
 clock-format = %d %b, %H:%M
 keyboard=onboard
 #reader=
-position=600,start 20%,center
+position=150,start 50%,center
 #screensaver-timeout=
 default-user-image=/usr/share/icons/arch-linux-svgrepo-com.svg
 laptop = true
